--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
 
      <footer>
         <h1 class="text-logo2">CONTACT US</h1>
+        <ul class="information-list">
+            <ul class="information-list2">
+            <li class="information-list-item"><input class="input1" placeholder="YOUR NAME*" type="text"></li>
+            <li class="information-list-item"><input class="input1" placeholder="YOUR E-MAIL*" type="text"></li>
+            <li class="information-list-item"><input class="input1" placeholder="SUBJECT" type="text"></li>
+            </ul>
+            <li class="information-list-item"><input class="input2" placeholder="YOUR MESSAGE*" type="text"></li>
+        </ul>
+        <ul class="btn">
+        <button>SEND MESSAGE</button>
+        </ul>
      </footer>
 </body>
 </html>
