--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
      <ul class="work-list">
         <li class="work-list-item">
-            <img src="/Знімок екрана (133).png" alt="">
+            <img src="./Знімок екрана (133).png" alt="">
             <h4 class="work-list-text1">E-Commerce</h4>
             <h5 class="work-list-text2">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</h5>
         </li>
         <li class="work-list-item">
-            <img src="/Знімок екрана (133)2.png" alt="">
+            <img src="./Знімок екрана (133)2.png" alt="">
             <h4 class="work-list-text1">Responsive Web</h4>
             <h5 class="work-list-text2">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</h5>
         </li>
         <li class="work-list-item">
-            <img src="/Знімок екрана (133)3.png" alt="">
+            <img src="./Знімок екрана (133)3.png" alt="">
             <h4 class="work-list-text1">Web Security</h4>
             <h5 class="work-list-text2">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</h5>
         </li>
